# SlashGaming-Diablo-II-Free-Display-Fix

./: .gitignore  .gitmodules  CMakeLists.txt  Fix for VC6.bat  LICENSE.md  README.md  SGD2FreeDisplayFix - Changelog.txt  SGD2FreeDisplayFix.dsw
.github/workflows/: cmake-msvc.yml
SGD2FreeDisplayFix/: CMakeLists.txt  SGD2FreeDisplayFix.dsp
SGD2FreeDisplayFix/include/: dllexport_define.inc  dllexport_undefine.inc  license.h  sgd2modl_exports.h
SGD2FreeDisplayFix/resource/: resource.rc
SGD2FreeDisplayFix/src/: dll_main.c  license.c  sgd2modl_exports.c
SGD2FreeDisplayFix/src/helper/: patch_address_and_size.c  patch_address_and_size.h
SGD2FreeDisplayFix/src/patches/: patches.c  patches.h
SGD2FreeDisplayFix/src/patches/required/: required_patches.c  required_patches.h
SGD2FreeDisplayFix/src/patches/required/d2ddraw_fix_corner_text_patch/: d2ddraw_fix_corner_text.c  d2ddraw_fix_corner_text.h  d2ddraw_fix_corner_text_patch.c  d2ddraw_fix_corner_text_patch.h  d2ddraw_fix_corner_text_patch_1_00.c  d2ddraw_fix_corner_text_patch_1_00.h  d2ddraw_fix_corner_text_patch_1_00_shim.asm  d2ddraw_fix_corner_text_patch_1_11.c  d2ddraw_fix_corner_text_patch_1_11.h  d2ddraw_fix_corner_text_patch_1_11_shim.asm  d2ddraw_fix_corner_text_patch_classic_1_14d.c  d2ddraw_fix_corner_text_patch_classic_1_14d.h  d2ddraw_fix_corner_text_patch_classic_1_14d_shim.asm
SGD2FreeDisplayFix/src/patches/required/d2direct3d_fix_corner_text_patch/: d2direct3d_fix_corner_text.c  d2direct3d_fix_corner_text.h  d2direct3d_fix_corner_text_patch.c  d2direct3d_fix_corner_text_patch.h  d2direct3d_fix_corner_text_patch_1_00.c  d2direct3d_fix_corner_text_patch_1_00.h  d2direct3d_fix_corner_text_patch_1_00_shim.asm  d2direct3d_fix_corner_text_patch_1_11.c  d2direct3d_fix_corner_text_patch_1_11.h  d2direct3d_fix_corner_text_patch_1_11_shim.asm
SGD2FreeDisplayFix/src/patches/required/d2direct3d_fix_display_mode_color_bits_patch/: d2direct3d_fix_display_mode_color_bits_patch.c  d2direct3d_fix_display_mode_color_bits_patch.h  d2direct3d_fix_display_mode_color_bits_patch_1_00.c  d2direct3d_fix_display_mode_color_bits_patch_1_00.h
SGD2FreeDisplayFix/src/patches/required/d2glide_fix_corner_text_patch/: d2glide_fix_corner_text.c  d2glide_fix_corner_text.h  d2glide_fix_corner_text_checksum.asm  d2glide_fix_corner_text_patch.c  d2glide_fix_corner_text_patch.h  d2glide_fix_corner_text_patch_1_00.c  d2glide_fix_corner_text_patch_1_00.h  d2glide_fix_corner_text_patch_1_00_shim.asm  d2glide_fix_corner_text_patch_1_11.c  d2glide_fix_corner_text_patch_1_11.h  d2glide_fix_corner_text_patch_1_11_shim.asm  d2glide_fix_corner_text_patch_classic_1_14a.c  d2glide_fix_corner_text_patch_classic_1_14a.h  d2glide_fix_corner_text_patch_classic_1_14a_shim.asm
SGD2FreeDisplayFix/src/patches/required/game_restore_ddraw_patch/: game_restore_ddraw.c  game_restore_ddraw.h  game_restore_ddraw_patch.c  game_restore_ddraw_patch.h  game_restore_ddraw_patch_classic_1_14a.c  game_restore_ddraw_patch_classic_1_14a.h  game_restore_ddraw_patch_classic_1_14a_shim.asm  game_restore_ddraw_patch_classic_1_14d.c  game_restore_ddraw_patch_classic_1_14d.h  game_restore_ddraw_patch_classic_1_14d_shim.asm  game_restore_ddraw_patch_lod_1_14a.c  game_restore_ddraw_patch_lod_1_14a.h  game_restore_ddraw_patch_lod_1_14a_shim.asm  game_restore_ddraw_patch_lod_1_14d.c  game_restore_ddraw_patch_lod_1_14d.h  game_restore_ddraw_patch_lod_1_14d_shim.asm
SlashGaming-Diablo-II-Free-Display-Fix/include/: dllexport_define.inc  dllexport_undefine.inc  license.hpp  sgd2modl_exports.h
SlashGaming-Diablo-II-Free-Display-Fix/resources/: resource.rc
SlashGaming-Diablo-II-Free-Display-Fix/src/: asm_x86_macro.h  dll_main.cc  license.cc  sgd2modl_exports.cc  wide_macro.h
SlashGaming-Diablo-II-Free-Display-Fix/src/patches/: patches.cc  patches.hpp
SlashGaming-Diablo-II-Free-Display-Fix/src/patches/required/: required_patches.cc  required_patches.hpp
SlashGaming-Diablo-II-Free-Display-Fix/src/patches/required/d2ddraw_fix_corner_text_patch/: d2ddraw_fix_corner_text.cc  d2ddraw_fix_corner_text.hpp  d2ddraw_fix_corner_text_patch.cc  d2ddraw_fix_corner_text_patch.hpp  d2ddraw_fix_corner_text_patch_1_00.cc  d2ddraw_fix_corner_text_patch_1_00.hpp  d2ddraw_fix_corner_text_patch_1_03.cc  d2ddraw_fix_corner_text_patch_1_03.hpp  d2ddraw_fix_corner_text_patch_1_04b.cc  d2ddraw_fix_corner_text_patch_1_04b.hpp  d2ddraw_fix_corner_text_patch_1_09d.cc  d2ddraw_fix_corner_text_patch_1_09d.hpp  d2ddraw_fix_corner_text_patch_1_10.cc  d2ddraw_fix_corner_text_patch_1_10.hpp  d2ddraw_fix_corner_text_patch_1_10_beta.cc  d2ddraw_fix_corner_text_patch_1_10_beta.hpp  d2ddraw_fix_corner_text_patch_1_11.cc  d2ddraw_fix_corner_text_patch_1_11.hpp  d2ddraw_fix_corner_text_patch_1_11b.cc  d2ddraw_fix_corner_text_patch_1_11b.hpp  d2ddraw_fix_corner_text_patch_1_12a.cc  d2ddraw_fix_corner_text_patch_1_12a.hpp  d2ddraw_fix_corner_text_patch_1_13a_beta.cc  d2ddraw_fix_corner_text_patch_1_13a_beta.hpp  d2ddraw_fix_corner_text_patch_1_13c.cc  d2ddraw_fix_corner_text_patch_1_13c.hpp  d2ddraw_fix_corner_text_patch_1_13d.cc  d2ddraw_fix_corner_text_patch_1_13d.hpp  d2ddraw_fix_corner_text_patch_classic_1_14a.cc  d2ddraw_fix_corner_text_patch_classic_1_14a.hpp  d2ddraw_fix_corner_text_patch_classic_1_14b.cc  d2ddraw_fix_corner_text_patch_classic_1_14b.hpp  d2ddraw_fix_corner_text_patch_classic_1_14c.cc  d2ddraw_fix_corner_text_patch_classic_1_14c.hpp  d2ddraw_fix_corner_text_patch_classic_1_14d.cc  d2ddraw_fix_corner_text_patch_classic_1_14d.hpp  d2ddraw_fix_corner_text_patch_lod_1_14a.cc  d2ddraw_fix_corner_text_patch_lod_1_14a.hpp  d2ddraw_fix_corner_text_patch_lod_1_14b.cc  (+5 more)
SlashGaming-Diablo-II-Window-ReResizer/include/: dllexport_define.inc  dllexport_undefine.inc  license.hpp  sgd2modl_exports.h
SlashGaming-Diablo-II-Window-ReResizer/src/: asm_x86_macro.h  dll_main.cc  license.cc  sgd2modl_exports.cc  wide_macro.h
SlashGaming-Diablo-II-Window-ReResizer/src/patches/: patches.cc  patches.hpp
SlashGaming-Diablo-II-Window-ReResizer/src/patches/required/: required_patches.cc  required_patches.hpp
(+120 files in other folders)
